--- a/WinFormsBlackJack/WinFormsBlackJack.csproj
+++ b/WinFormsBlackJack/WinFormsBlackJack.csproj
@@ -8,4 +8,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\ConsoleBlackJack\BlackJack\BlackJack.csproj" />
+    <ProjectReference Include="..\GraphicsInfrastructure\GraphicsInfrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
